website/stylesheet.css
body {
    padding-top: 54px;
}

@media (min-width: 992px) {
    body {
        padding-top: 56px;
    }
}

#query {
    margin: auto;
    
}

#footer {
	clear:both;
	height: 20px;
	text-align: center;
}

#map {
    height: 85%;
    width: 60%;
    position: absolute;
    left:20%;

}

#result_left{
    height: 85%;
    width: 20%;
    position: absolute;
    left: 0%;
}

#result_right{
    height: 85%;
    width: 20%;
    position: absolute;
    left: 80%;
    background-color: clear;
}

#result_bottom{
    height: 100%
    width: 100%;
    position: absolute;
    bottom: 5px;
    left: 17%;
}

#about_body {
    margin: 20px 20px 20px 20px;
    text-align: justify;
}

#result_table {
    font-family: arial, sans-serif;
    border-collapse: collapse;
    width: 100%;
}

#result_td_th{
    border: 1px solid #dddddd;
    padding: 8px;
}

#result_tr:nth-child(even) {
    background-color: #dddddd;
}

